--- a/css/style.css
+++ b/css/style.css
@@ -491,7 +491,12 @@ img {
 @media only screen and (max-width: 300px) {
   .prev,
   .next,
-  .text {
+  .text
+   {
     font-size: 11px
   }
+    *{
+        margin:0px;
+        padding:0px;
+    }
 }
